added email verification
